[package]
name = "monoio-postgres"
version = "0.1.0"
authors = ["Mohamed Seleem <oss@mselee.com>"]
edition = "2021"
license = "MPL-2.0"
description = "An asynchronous PostgreSQL client"
repository = "https://github.com/mselee/monoio-postgres"
readme = "README.md"
keywords = ["database", "postgres", "postgresql", "sql", "async", "monoio"]
categories = ["database"]

[lib]
test = false

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true

[features]
default = ["runtime"]
runtime = []

array-impls = ["postgres-types/array-impls"]
with-bit-vec-0_6 = ["postgres-types/with-bit-vec-0_6"]
with-chrono-0_4 = ["postgres-types/with-chrono-0_4"]
with-eui48-0_4 = ["postgres-types/with-eui48-0_4"]
with-eui48-1 = ["postgres-types/with-eui48-1"]
with-geo-types-0_6 = ["postgres-types/with-geo-types-0_6"]
with-geo-types-0_7 = ["postgres-types/with-geo-types-0_7"]
with-serde_json-1 = ["postgres-types/with-serde_json-1"]
with-smol_str-01 = ["postgres-types/with-smol_str-01"]
with-uuid-0_8 = ["postgres-types/with-uuid-0_8"]
with-uuid-1 = ["postgres-types/with-uuid-1"]
with-time-0_2 = ["postgres-types/with-time-0_2"]
with-time-0_3 = ["postgres-types/with-time-0_3"]
js = ["postgres-protocol/js", "postgres-types/js"]

[dependencies]
bytes = "1.0"
byteorder = "1.0"
fallible-iterator = "0.2"
log = "0.4"
parking_lot = "0.12"
percent-encoding = "2.0"
pin-project-lite = "0.2"
phf = "0.11"
postgres-protocol = { git = "https://github.com/imor/rust-postgres", rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
postgres-types = { git = "https://github.com/imor/rust-postgres", rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
serde = { version = "1.0", optional = true }
rand = "0.8.5"
whoami = "1.4.1"
monoio = { version = "0.2.4", default-features = false, features = ["bytes"] }
local-sync = { git = "https://github.com/mselee/local-sync", rev = "d71f9168e0736404fa6eb6bd41209224770e072a" }
monoio-codec = "0.3.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
monoio = { version = "0.2.4" }

bit-vec-06 = { version = "0.6", package = "bit-vec" }
chrono-04 = { version = "0.4", package = "chrono", default-features = false }
eui48-1 = { version = "1.0", package = "eui48", default-features = false }
geo-types-06 = { version = "0.6", package = "geo-types" }
geo-types-07 = { version = "0.7", package = "geo-types" }
serde_json-1 = { version = "1.0", package = "serde_json" }
smol_str-01 = { version = "0.1", package = "smol_str" }
uuid-08 = { version = "0.8", package = "uuid" }
uuid-1 = { version = "1.0", package = "uuid" }
time-02 = { version = "0.2", package = "time" }
time-03 = { version = "0.3", package = "time", features = ["parsing"] }
